--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav img{
     width: 75%;
 }
 .home{
-    width: 80%;
+    width: 100%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
@@ -99,7 +99,7 @@ nav img{
 }
 .layer h3{
     width: 100%;
-    font-weight: 500;
+    font-weight: 550;
     color: black;
     bottom: 0%;
     left: 50%;
@@ -109,14 +109,13 @@ nav img{
 }
 .layer:hover h3{
     top: 10%;
-    opacity: 2;
+    opacity: 5;
 }
 .layer p{
-    width: 100%;
-    font-weight: 500;
+    width: 80%;
+    font-weight: 550;
     color: black;
-    font-size: 26px;
-    bottom: 0%;
+    font-size: 20px;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
@@ -124,7 +123,7 @@ nav img{
 }
 .layer:hover p{
     top: 40%;
-    opacity: 1;
+    opacity: 5;
 }
 .sub-header{
     height: 25vh;
@@ -152,7 +151,7 @@ nav img{
     margin-left: 50%;
 }
 .about-column img{
-    width: 30%;
+    width: 35%;
     margin-left: 50%;
 }
 .about-column p{
@@ -168,13 +167,12 @@ nav img{
     text-align: center;
 }
 .contact_us-column{
-    flex-basis: 30%;
+    flex-basis: 40%;
     border-radius: 10px;
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-bottom: 3%;
+    margin-left: 30%;
+    margin-right: 30%;
     background: #d3d3d3;
-    padding: 20px 12px;
+    padding: 10px 12px;
     box-sizing: border-box;
 }
 .footer{
@@ -189,24 +187,19 @@ nav img{
         width: 50px;
     }
     .nav-links ul li{
-        list-style: none;
-        display: inline-block;
         padding: 5px;
-        position: relative;
     }
     .nav-links ul li a{
-        color:#d3d3d3;
-        text-decoration: none;
         font-size: 14px;
+    }
+    .text-box{
+        top: 50%;
     }
     .text-box h1{
         font-size: 40px;
     }
     .text-box p{
-        margin: auto;
         font-size: 13px;
-        color: rgb(255, 255, 255);
-        width: 75%;
     }
     .home h1{
         font-size: 20px;
@@ -217,13 +210,7 @@ nav img{
     .layer p{
         width: 90%;
         font-weight: 500;
-        color: black;
         font-size: 5px;
-        bottom: 0%;
-        left: 50%;
-        transform: translateX(-50%);
-        position: absolute;
-        opacity: 0;
     }
     .sub-header{
         height: 13vh;
@@ -241,15 +228,15 @@ nav img{
     }
     .about-column p{
         width: 65%;
-        margin-left: 10%;
-        text-align: justify;
         font-size: 9.1px;
     }
     .contact_us h1{
         font-size: 15px;
     }
     .contact_us-column{
-        flex-basis: 45%;
+        flex-basis: 50%;
+        margin-left: 25%;
+        margin-right: 25%;
     }
     .contact_us-column h3{
         font-size: 8px;
